# finchge

./: .coverage  .gitignore  CHANGELOG.md  LICENSE  README.md  __init__.py  mkdocs.yml  pyproject.toml  readthedocs.yaml  requirements.txt
.github/workflows/: publish.yml  tests.yml
docs/: api.md  changelog.md  contributing.md  getting_started.md  index.md  installation.md  requirements.txt
docs/plugins/: version.py
finchge/: __init__.py  evolution.py  fitness.py  population.py
finchge/algorithm/: __init__.py  algorithm.py  ga.py  nsga.py
finchge/grammar/: __init__.py  genotype_mapper.py  grammar_helper.py  parser.py  repair_strategy.py  rule.py  tree_node.py
finchge/model/: model.py  parser.py
finchge/operators/: crossover.py  mutation.py  replacement.py  selection.py
finchge/utils/: cache_manager.py  config_helper.py  constants.py  loghelper.py  results.py  syntax.py
tests/: test_grammar.py  test_setup.py
